Added code comments

--- a/SimpleChart.html
+++ b/SimpleChart.html
@@ -49,7 +49,8 @@
                 borderWidth: 0
             };
             
-            //The data to be displaed on the chart, Series is an array wherein each element represents a single line on the chart. On a future project the data will be pulled from a mySQL database. 
+            //The data to be displaed on the chart, Series is an array wherein each element represents a single line on the chart.
+            //On a future project the data will be pulled from a mySQL database. 
             var series = [
                 {
                     name: 'Dar es Salaam',
