Soon to be modified as i learn more

--- a/SimpleChart.html
+++ b/SimpleChart.html
@@ -9,6 +9,7 @@
   <div id="container" style="width: 550px; height: 400px; margin: 0 auto"></div>
     <script language="JavaScript">
         $(document).ready(function() {
+            //Soon to be modified as I learn more about highcharts
             //title of the chart
             var title = {
                 text: 'Monthly Average Temperature'
